Implemented recipe detail feature with UI model and navigation
- added RecipeUiModel for passing data between fragments
- created RecipeDetailFragment with fragment_recipe_detail.xml layout
- wired nav_graph to support navigation from list to detail
- removed obsolete RecipeListViewModelFactory

--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -13,7 +13,7 @@
         android:id="@+id/cardRecipe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginHorizontal="16dp"
         app:cardCornerRadius="12dp"
         app:cardUseCompatPadding="true">
 
@@ -22,6 +22,17 @@
             android:layout_height="wrap_content"
             android:padding="12dp">
 
+            <ImageView
+                android:id="@+id/imageThumb"
+                android:layout_width="96dp"
+                android:layout_height="96dp"
+                android:scaleType="centerCrop"
+                android:contentDescription='@{recipe.name}'
+                app:imageUrl='@{recipe.image}'
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
             <TextView
                 android:id="@+id/textTitle"
                 android:layout_width="0dp"
@@ -29,9 +40,10 @@
                 android:text='@{recipe.name}'
                 android:textSize="16sp"
                 android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@id/imageThumb"
+                app:layout_constraintTop_toTopOf="@id/imageThumb"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                android:layout_marginStart="12dp" />
 
             <TextView
                 android:id="@+id/textMeta"
@@ -39,20 +51,22 @@
                 android:layout_height="wrap_content"
                 android:text='@{`★ ` + String.valueOf(recipe.rating) + ` • ` + recipe.difficulty}'
                 android:textSize="13sp"
+                app:layout_constraintStart_toStartOf="@id/textTitle"
+                app:layout_constraintTop_toBottomOf="@id/textTitle"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textTitle"/>
+                android:layout_marginTop="4dp" />
 
             <TextView
                 android:id="@+id/textTags"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:tagsText='@{recipe.tags}'
                 android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:tagsText='@{recipe.tags}'
+                app:layout_constraintStart_toStartOf="@id/textTitle"
+                app:layout_constraintTop_toBottomOf="@id/textMeta"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textMeta"/>
+                app:layout_constraintBottom_toBottomOf="@id/imageThumb"
+                android:layout_marginTop="4dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
